# XVision

./: .gitignore
XVision/: CMakeLists.txt
XVision/CommonCMake/: CommonProjectOutputSet.cmake  CommonXvFuncOutputSet.cmake
XVision/CommonUsing/: CMakeLists.txt  CommonUsing.cmake
XVision/CommonUsing/Lib/msvc/: AdsDocking.lib  XGraphics.lib  XLanguage.exp  XLanguage.lib  XLog.lib  XWidget.lib
XVision/CommonUsing/LibD/msvc/: AdsDocking.exp  AdsDocking.lib  XConcurrent.lib  XFlowGraphics.lib  XGraphics.exp  XGraphics.lib  XLanguage.exp  XLanguage.lib  XLog.exp  XLog.lib  XWidget.exp  XWidget.lib  XWidgetDesignerPlugin.exp  XWidgetDesignerPlugin.lib
XVision/CommonUsing/Project/AdsDocking/: CMakeLists.txt
XVision/CommonUsing/Project/XConcurrent/: CMakeLists.txt
XVision/CommonUsing/Project/XFlowGraphics/: CMakeLists.txt
XVision/CommonUsing/Project/XGraphics/: CMakeLists.txt
XVision/CommonUsing/Project/XLanguage/: CMakeLists.txt
XVision/CommonUsing/Project/XLog/: CMakeLists.txt
XVision/CommonUsing/Project/XWidget/: CMakeLists.txt  更新XWidget库注意事项.txt
XVision/XVision/: CMakeLists.txt  main.cpp
XVision/XVision/Core/: XvAppCoreManager.cpp  XvAppCoreManager.h  XvGraphicsFactory.cpp  XvGraphicsFactory.h  XvSingleApplication.cpp  XvSingleApplication.h  XvViewManager.cpp  XvViewManager.h  XvViewMgr.cpp  XvViewMgr.h  XvWorkManager.cpp  XvWorkManager.h
XVision/XVision/CoreFrm/: FrmMainWork.cpp  FrmMainWork.h  FrmMainWork.ui
XVision/XVision/Def/: DockDef.h  LangDef.h
XVision/XVision/MainFrm/: AppMainWindow.cpp  AppMainWindow.h
XVision/XVision/Model/: BaseWidget.cpp  BaseWidget.h
XVision/XVision/QBreakpad/: CMakeLists.txt
XVision/XVision/QBreakpad/handler/: QBreakpadHandler.cpp  QBreakpadHandler.h
XVision/XVision/Res/: AppRes.qrc
XVision/XVision/Res/config/: DockMainManagerDefault.ini
XVision/XVision/Res/style/: DockFlow_Default.css  DockMain_Default.css  Light_Default.css
XVision/XVision/SingleApplication/: CMakeLists.txt  singleapplication.cpp
XVision/XVision/UIOutput/: FrmLogShow.cpp  FrmLogShow.h  FrmLogShow.ui  FrmThreadMonitor.cpp  FrmThreadMonitor.h  FrmThreadMonitor.ui  FrmXvFuncResult.cpp  FrmXvFuncResult.h  FrmXvFuncResult.ui
XVision/XVision/UiCore/: FrmVisionDisplay.cpp  FrmVisionDisplay.h  FrmVisionDisplay.ui  FrmVisionImage.cpp  FrmVisionImage.h  FrmVisionImage.ui  UiXvDisplayManager.cpp  UiXvDisplayManager.h
XVision/XVision/UiMain/: AppMainWindow.cpp  AppMainWindow.h  DockMainManager.cpp  DockMainManager.h  FrmAbout.cpp  FrmAbout.h  FrmAbout.ui  FrmAppWelcome.cpp  FrmAppWelcome.h  FrmAppWelcome.ui
XVision/XVision/UiWork/: FrmVisionWork.cpp  FrmVisionWork.h  FrmVisionWork.ui  UiXvWorkManager.cpp  UiXvWorkManager.h
XVision/XVision/UiWork/UiXvFlow/: FrmXvFlowConfig.cpp  FrmXvFlowConfig.h  FrmXvFlowConfig.ui  UiXvFlowManager.cpp  UiXvFlowManager.h
XVision/XVision/UiWork/UiXvFunc/: FrmXvFuncAsm.cpp  FrmXvFuncAsm.h  FrmXvFuncAsm.ui  FrmXvFuncType.cpp  FrmXvFuncType.h  FrmXvFuncType.ui  WdgItemXvFunc.cpp  WdgItemXvFunc.h  WdgItemXvFunc.ui
XVision/XVision/Utils/: HardWareInfo.cpp  HardWareInfo.h  UiUtils.cpp  UiUtils.h
XVision/XvCommon/: CMakeLists.txt
XVision/XvCommon/include/: XmlSerializable.h  XvCommonGlobal.h
XVision/XvCommon/src/: XmlSerializable.cpp
XVision/XvCore/: CMakeLists.txt
XVision/XvCore/Core/: XvCoreHelper.cpp  XvCoreManager.cpp  XvFlow.cpp  XvFunc.cpp  XvFuncAssembly.cpp  XvProject.cpp
XVision/XvCore/Def/: LangDef.h
XVision/XvCore/Plugin/: XvPluginManager.cpp
XVision/XvCore/Src/: IXvFactoryPlugin.cpp  XvCoreManager.cpp  XvCoreMgr.cpp  XvFuncAssembly.cpp  XvFuncBase.cpp  XvPluginManager.cpp  XvPluginMgr.cpp
XVision/XvCore/include/: IXvFactoryPlugin.h  XVFunc.h  XVFuncBase.h  XvCoreDef.h  XvCoreGlobal.h  XvCoreHelper.h  XvCoreManager.h  XvCoreMgr.h  XvError.h  XvFlow.h  XvFuncAssembly.h  XvFuncData.h  XvFuncDef.h  XvPluginManager.h  XvPluginMgr.h  XvProject.h
XVision/XvCore/res/: Res.qrc
XVision/XvData/: CMakeLists.txt
XVision/XvData/XObject/: XBool.cpp  XImage.cpp  XInt.cpp  XObject.cpp  XObjectList.cpp  XObjectSet.cpp  XReal.cpp  XString.cpp
XVision/XvData/include/: XBool.h  XImage.h  XInt.h  XObject.h  XObjectBaseType  XObjectList.h  XObjectSet.h  XReal.h  XString.h  XmlSerializable.h  XvDataGlobal.h
XVision/XvDisplay/: CMakeLists.txt
XVision/XvDisplay/Graphics/: XvDisplayImageItem.cpp  XvDisplayScene.cpp  XvDisplayView.cpp
XVision/XvDisplay/Roi/: XvDisplayBaseRoiItem.cpp  XvDisplayCircleRoi.cpp  XvDisplayControlItem.cpp  XvDisplayEllipseRoi.cpp  XvDisplayRectRoi.cpp  XvDisplayRotateRectRoi.cpp
XVision/XvDisplay/include/: XvDisplay  XvDisplayBaseRoiItem.h  XvDisplayCircleRoi.h  XvDisplayControlItem.h  XvDisplayEllipseRoi.h  XvDisplayGlobal.h  XvDisplayImageItem.h  XvDisplayRectRoi.h  XvDisplayRotateRectRoi.h  XvDisplayScene.h  XvDisplayView.h
XVision/XvFuncCollection/VFuncTest_A/: CMakeLists.txt  VFuncTest_A_FactoryPlugin.cpp  VFuncTest_A_FactoryPlugin.h  VFuncTest_A_global.h  VFunc_T1.cpp  VFunc_T1.h  VFunc_T2.cpp  VFunc_T2.h  VTest1.cpp  VTest1.h  XvFuncTest.cpp  XvFuncTest.h
XVision/XvFuncCollection/XvFuncSystem/: CMakeLists.txt  XVFuncSystem_global.h  xvfuncsystem.cpp  xvfuncsystem.h
XVision/XvFuncCollection/XvFuncSystem/DataProcessing/: BaseDataBoolCalc.cpp  BaseDataBoolCalc.h  BaseDataBoolCalcWdg.cpp  BaseDataBoolCalcWdg.h  BaseDataBoolCalcWdg.ui  BaseDataIntCalc.cpp  BaseDataIntCalc.h  BaseDataIntCalcWdg.cpp  BaseDataIntCalcWdg.h  BaseDataIntCalcWdg.ui  BaseDataRealCalc.cpp  BaseDataRealCalc.h  BaseDataRealCalcWdg.cpp  BaseDataRealCalcWdg.h  BaseDataRealCalcWdg.ui  BaseDataStringProcess.cpp  BaseDataStringProcess.h  BaseDataStringProcessWdg.cpp  BaseDataStringProcessWdg.h  BaseDataStringProcessWdg.ui  (+5 more)
XVision/XvTokenMsg/: CMakeLists.txt
XVision/XvTokenMsg/include/: IXvTokenMsgable.h  XvTokenMsg.h  XvTokenMsgGlobal.h  XvTokenMsgManager.h  XvTokenMsgMgr.h
XVision/XvTokenMsg/src/: IXvTokenMsgable.cpp  XvTokenMsgManager.cpp  XvTokenMsgMgr.cpp
XVision/XvUtils/: CMakeLists.txt
XVision/XvUtils/Src/: XvUtils.cpp
XVision/XvUtils/include/: XvUtils.h  XvUtilsGlobal.h
(+288 files in other folders)
